--- a/css/common/navbar.css
+++ b/css/common/navbar.css
@@ -5,15 +5,17 @@
     background-color: #ffffff;
     border-right: 1px solid #e5e5e5;
 }
-    .navbar .logo-site, .navbar .logo-box {
+    .navbar .logo-site {
         display: flex;
         width: 100%;
-        height: 60px;
+        height: 48px;
     }
         .navbar .logo-box {
-            /*padding: 24px 0 0 24px;*/
-            position: absolute;
-            top: 24px;
+            display: flex;
+            width: 100%;
+            height: 48pxpx;
+            padding: 12px 0 12px 16px;
+            height: 48px;
         }
 
         /* Logo page */
@@ -23,6 +25,7 @@
             background-image: url('../../content/img/toggle.png');
             background-size: contain;
             background-repeat: no-repeat;
+            margin-right: 10px;
         }
 
         .navbar .logo-box .amis-logo {
@@ -37,5 +40,60 @@
         width: 100%;
     }
 
-        
+        .navbar .navbar-content .nav-item {
+            display: flex;
+            padding-left: 16px;
+            height: 44px;
+            background-color: #ffffff;
+            cursor: pointer;
+            /* căn giữa dòng theo chiều dọc */
+            line-height: 44px; 
+
+            /* align-items: center; */
+        }
+
+            .navbar .navbar-content .nav-item:hover {
+                background-color: #e5e5e5;
+                color: #000000;
+            }
+
+            .navbar .navbar-content .nav-item:focus {
+                background-color: #019160;
+                color: #ffffff;
+                font-family: 'GoogleSans-Medium';
+            }
+
+.nav-item .nav-item-icon {
+    width: 20px;
+    height: 20px;
+    /* test */
+    /* border: 1px solid black; */
+
+    /* căn giữa dòng theo chiều dọc */
+    /* margin: auto 0; */
+    align-self: center;
+
+    margin-right: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}   
+
+.nav-item-dashboard {
+    background-image: url('/content/icon/dashboard.png');
+}
+.nav-item-report {
+    background-image: url('/content/icon/report.png');
+}
+.nav-item-buy {
+    background-image: url('/content/icon/dashboard.png');
+}
+.nav-item-customer {
+    background-image: url('/content/icon/dic-employee.png');
+}
+.nav-item-employee {
+    background-image: url('/content/icon/dic-employee.png');
+}
+.nav-item-setting {
+    background-image: url('/content/icon/setting.png');
+}
 
