--- a/css/common/toolbar.css
+++ b/css/common/toolbar.css
@@ -3,12 +3,12 @@
   display: flex;
   align-items: center;
   height: 40px;
-  /* border: 1px solid black; */
-  background-color: #eee;
+  margin-top: 10px;
+  /* padding-left: 16px; */
 }
-  .filter-bar .filter-left {
-
-  }
+  /* .filter-bar .filter-left {
+    padding-left: 16px;
+  } */
 
   .filter-bar .filter-right {
     position: absolute;
