--- a/css/common/grid.css
+++ b/css/common/grid.css
@@ -1,79 +1,86 @@
 .grid {
   position: relative;
-  width: 100%;
+  width: 400px;
+  height: 400px;
   /* background-color: blueviolet; */
-  overflow-x: auto;
+  /* overflow-x: auto;
+  overflow-y: hidden; */
+  /* overflow: hidden; */
 }
 
 table {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   /* border-collapse: collapse; */
+  table-layout: fixed;  
+}
+
+  table tr {
+    box-sizing: border-box;
+    height: 48px;
+    border-bottom: 1px solid #bbbbbb;
+  }
+
+  th, td {
+    text-align: left;
+    padding-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    border-bottom: 1px solid #bbbbbb;
+  }
+
+  tbody tr:nth-child(odd) {
+    background-color: #E9EBEE;
+  }
+
+/*  */
+tbody {
+  width: fit-content;
   table-layout: fixed;
-  overflow-x: auto;
 }
-
-table tr {
-  box-sizing: border-box;
-  height: 48px;
-  border-bottom: 1px solid #bbbbbb;
-}
-
-th, td {
-  text-align: left;
-  padding-left: 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  border-bottom: 1px solid #bbbbbb;
-}
-
-tbody tr:nth-child(odd) {
-  background-color: #E9EBEE;
-}
-
+/* 
 tbody {
   display: block;
-  height: 500px;
-  width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  height: 400px;
+  overflow: auto;
 }
 
 thead, tbody tr {
   display: table;
   table-layout: fixed;
   width: 100%;
-}
-
+} */
 /* thead {
   position: sticky;
+  position: -webkit-sticky;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
   top: 0;
   left: 0;
+  right: 0;
   z-index: 10;
   background-color: #ffffff;
+  
 } */
 
-/* tbody {
-  display: flex;
-  height: 500px;
-  overflow: auto;
-}*/
 
 
-
-/* ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
+  /* margin-top: 48px; */
   background: #BBBBBB; 
 }
  
 ::-webkit-scrollbar-thumb {
   background: #454545; 
-} */
+}
 
 /* ::-webkit-scrollbar-thumb:hover {
   background: #555; 
