--- a/css/common/icon.css
+++ b/css/common/icon.css
@@ -1,19 +1,11 @@
-.icon-option-default-16 {
-  width: 16px;
-  height: 16px;
-  background-image: url('/content/icon/option.png');
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
 .icon-add {
   width: 16px;
   height: 16px;
-  background-image: url('/content/icon/add.png');
+  background-image: url('../../content/icon/add.png');
 }
 
 .icon-search {
-  background-image: url('/content/icon/search.png');
+  background-image: url('../../content/icon/search.png');
   background-position: 16px center;
   background-repeat: no-repeat;
 }
