--- a/css/page/employee.css
+++ b/css/page/employee.css
@@ -1,5 +1,3 @@
-﻿.grid-employee {
-  margin-top: 10px;
-  height: calc(100% - 25px - 32px - 10px - 40px - 56px);
-  /* height: calc(100vh - 256px); */
+.grid-content {
+  height: calc(100% - 152px); 
 }
