--- a/css/page/form-employee.css
+++ b/css/page/form-employee.css
@@ -12,7 +12,8 @@
   background-color: #ffffff;
   /* margin: 20px auto; */
   margin: auto;
-  width: 40%;
+  width: 50%;
+  max-width: 600px;
   border-radius: 4px;
   resize: both;
 }
