--- a/css/common/pop-up.css
+++ b/css/common/pop-up.css
@@ -1,12 +1,21 @@
-body {
-  width: 100vh;
-  height: 100vh;
+#popup-container {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
+  z-index: 3;
 }
-
-.popup-container {
-  position: relative;
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
   background-color: #ffffff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
   margin: auto;
   width: 420px;
   border-radius: 4px;
@@ -31,7 +40,7 @@ body {
     background-color: #dadce0;
   }
 
-.popup-container .popup-title {
+.popup .popup-title {
   display: inline-block;
   margin: 24px 48px 24px 24px;
   font-size: 15px;
@@ -39,14 +48,14 @@ body {
   color: #000000;
 }
 
-.popup-container .popup-content {
+.popup .popup-content {
   display: flex;
   align-items: center;
   gap: 10px;
   margin: 0 24px 24px 24px;
 }
 
-  .popup-container .popup-content .popup-icon {
+  .popup .popup-content .popup-icon {
     flex-shrink: 0;
     box-sizing: border-box;
     width: 30px;
@@ -58,12 +67,12 @@ body {
     line-height: 30px;
   }
 
-  .popup-container .popup-content .popup-icon > img {
+  .popup .popup-content .popup-icon > img {
     width: 16px;
     height: 16px;
   }
 
-  .popup-container .popup-content .popup-text {
+  .popup .popup-content .popup-text {
     font-size: 13px;
     font-family: 'GoogleSans-Regular';
     color: #000000;
