--- a/css/common/toast-messenger.css
+++ b/css/common/toast-messenger.css
@@ -1,4 +1,18 @@
+#toast-msg-container {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+}
+
 .toast-msg {
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  /* transform: translateX(-50%); */
+  margin-top: 10px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,11 +22,12 @@
   border-radius: 4px;
   font-size: 13px;
   color: #000000;
+  background-color: #ffffff;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-
-  margin: auto;
   
   width: 300px;
+
+  transition: 1s ease;
 }
 
 
