add: validate input

--- a/css/common/main.css
+++ b/css/common/main.css
@@ -52,3 +52,32 @@ body {
 .padding-left-10px {
   padding-right: 10px;
 }
+
+.notice {
+  z-index: 99;
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: -100%;
+  transform: translate(-50%, 50%);
+  width: 150px;
+  /* height: 50px; */
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #FF4747;
+  color: #ffffff;
+  text-align: center;
+}
+
+.notice::after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%, -50%);
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 20px solid #FF4747;
+}
