--- a/css/layout/menu.css
+++ b/css/layout/menu.css
@@ -6,6 +6,11 @@
   display: inline-block;
   /* margin-top: 0px; */
   /* z-index: 999; */
+  transition: 0.5s ease;
+}
+
+.menu.collapse {
+  width: 51px;
 }
 
 .menu .menu-item {
