--- a/css/layout/page.css
+++ b/css/layout/page.css
@@ -6,6 +6,11 @@
   bottom: 0;
   padding: 16px;
   background-color: #e9ebee;
+  transition: 0.5s ease;
+}
+
+.page.expand {
+  left: 52px;
 }
 
 .page-header {
