refactor: add comment and modify a bit

--- a/css/common/main.css
+++ b/css/common/main.css
@@ -3,6 +3,9 @@
 @import url(input.css);
 @import url(modal.css);
 @import url(combobox.css);
+@import url(selectbox.css);
+@import url(pop-up.css);
+@import url(toast-messenger.css);
 
 body {
   font-family: GoogleSans;
